--- a/vim/setup/install
+++ b/vim/setup/install
@@ -5,12 +5,11 @@ set -e
 echo "\n=========="
 echo "Setting up Vim\n"
 
-echo "Installing Vundle"
-git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim \
-  || echo "Vundle already installed"
+echo "Installing vim-plug"
+curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim || echo "Vundle already installed"
 
 echo "Installing vim plugins"
-vim +PluginInstall +qa
+vim +PlugInstall +qa
 
 echo "Creating undo directory"
 mkdir -p ~/.vim/undo || echo "Undo directory exists"
