--- a/ruby/setup/install
+++ b/ruby/setup/install
@@ -1,3 +1,1 @@
-latest_ruby_version=$(rbenv install --l | ag -v - | tail -1)
-rbenv install $latest_ruby_version
-rbenv global $latest_ruby_version
+ruby-install ruby 2.2.3
